--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
 
 //    Dagger2
-    compile 'javax.inject:javax.inject:1'
-    compile 'javax.annotation:javax.annotation-api:1.2'
-    compile 'com.google.dagger:dagger:2.0'
-    provided 'com.google.dagger:dagger-compiler:2.0'
+    apt 'com.google.dagger:dagger-compiler:2.0.2'
+    compile 'com.google.dagger:dagger:2.0.2'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
